fix: show horizontal scrollbar on small screen

--- a/modules/front-end/src/app/features/safe/safe.component.less
+++ b/modules/front-end/src/app/features/safe/safe.component.less
@@ -27,9 +27,10 @@
 
   section.right-container {
     height: 100vh;
+    min-width: 0;
     padding-right: 4px;
 
-    .header-container{
+    .header-container {
       width: 100%;
       height: 60px;
       background-color: #FFFFFF;
